--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                  </div>
                  <h1 class="title">SEDANS</h1>
                  <p class="parrafo">
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vero in rerum, perspiciatis quam placeat!
+                     Choose a sedan for its affordability and excellent
+                     fuel economy. Ideal for cruising in the city or on
+                     your next road trip.
                  </p>
                  <a href="#">
                     <button class="button_A">Learn More</button>
@@ -36,7 +38,10 @@
                     </div>
                     <h1 class="title">SUVS</h1>
                     <p class="parrafo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vero in rerum, perspiciatis quam placeat!
+                        Take an SUV for its spacious
+                        interior, power, and versatility.
+                        Perfect for your next family vacation
+                        and off-road adventures.
                     </p>
                     <a href="#">
                         <button class="button_B">Learn More</button>
@@ -53,7 +58,9 @@
                     </div>
                     <h1 class="title">LUXURY</h1>
                     <p class="parrafo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vero in rerum, perspiciatis quam placeat!
+                        Cruise in the best car brands without the 
+                        bloated prices. Enjoy the enhanced comfort
+                        of a luxury rental and arrive in style.
                     </p>
                     <a href="#">
                         <button class="button_C">Learn More</button>
